# pace2024

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  LICENSE.md  Makefile  README.md  compile_gurobi.sh  compile_lpsolve.sh  compile_or.sh  eval_case.sh  eval_set.sh  medium_gurobi.ex  medium_lpsolve.ex  medium_or_CBC.ex  medium_or_CP_SAT.ex  medium_or_HIGHS.ex  medium_shorter.ex  medium_simple.ex  run_bananasso.sh  run_case.sh  run_set.sh  script.sh  style.md  tiny_lpsolve.ex
.github/: CODEOWNERS
.github/workflows/: compile.yml  format.yml
cadical/scripts/: get-git-id.sh
cadical/src/: version.cpp
gurobi/: ReleaseNotes.html  gurobi.lic  setup.py
gurobi/R/: README
gurobi/docs/examples/: a_list_of_the_grb_examples.html  additional_modeling_elemen.html  batchmode_c_c.html  batchmode_cpp_cpp.html  batchmode_cs_cs.html  batchmode_java.html  batchmode_py.html  batchmode_vb_vb.html  bilinear_c_c.html  bilinear_cpp_cpp.html  bilinear_cs_cs.html  bilinear_java.html  bilinear_m.html  bilinear_py.html  bilinear_r.html  bilinear_vb_vb.html  build_a_model.html  c_examples.html  cb_c_c.html  cb_cpp_cpp.html  cb_cs_cs.html  cb_java.html  cb_py.html  cb_s.html  cb_vb_vb.html  change_parameters.html  cpp_examples.html  cs_examples.html  custom_py.html  dense_c_c.html  dense_cpp_cpp.html  dense_cs_cs.html  dense_java.html  dense_py.html  dense_vb_vb.html  diagnose_and_cope_with_inf.html  diet2_py.html  diet3_py.html  diet4_py.html  diet_c_c.html  (+260 more)
gurobi/docs/refman/: _code_examples_.html  _code_for_the_experiment_o.html  _code_for_the_experiment_o2.html  _code_for_the_experiment_w.html  a_complete_example.html  additional_details.html  advanced_user_scaling.html  aggfill.html  aggregate.html  algorithmic_parameters.html  attr_format.html  attribute_examples.html  attributes.html  avoid_hiding_large_coeffic.html  avoid_rounding_of_input.html  barconvtol.html  barcorrectors.html  barhomogeneous.html  baritercount.html  bariterlimit.html  barorder.html  barqcpconvtol.html  barrier_logging.html  barx.html  bas_format.html  batch_attributes.html  batch_optimization.html  batch_status_codes.html  batcherrorcode.html  batcherrormessage.html  batchid.html  batchstatus.html  bestbdstop.html  bestobjstop.html  boundsvio.html  boundsvioindex.html  boundsviosum.html  boundvio.html  boundvioindex.html  boundviosum.html  (+1630 more)
gurobi/docs/remoteservices/: aborting_batches.html  aborting_jobs.html  accessing_job_logs.html  accessing_job_parameters.html  accessing_the_job_history.html  appendix_a_rs.html  appendix_b_rs_configuratio.html  appendix_c_rsm.html  appendix_d_rsm_configurati.html  appendix_e_cluster.html  appendix_f_grb_cl.html  appendix_g_acknowledgment_.html  appendix_h_open_component_.html  architecture.html  architecture_topologies.html  authentication.html  batch_commands.html  cb_s.html  changing_the_job_limit.html  client_api.html  client_commands.html  client_configuration.html  client_license_file.html  client_server_optimization.html  client_setup.html  cluster_manager.html  cluster_manager_server__rs.html  cluster_rest_api.html  cluster_setup_and_administ.html  communication_options.html  compute_servers_and_distri.html  configuration.html  configuring_a_cluster_node.html  configuring_the_cluster_ma.html  connecting_nodes.html  creating_batches.html  deleting_a_file_from_the_r.html  developing_for_compute_ser.html  discarding_batches.html  distributed_algorithm_cons.html  (+67 more)
gurobi/examples/R/: bilinear.R  diet.R  facility.R  feasopt.R  fixanddive.R  gc_funcnonlinear.R  gc_pwl.R  gc_pwl_func.R  genconstr.R  lp.R  lp2.R  lpmethod.R  lpmod.R  mip.R  mip2.R  multiobj.R  params.R  piecewise.R  poolsearch.R  qcp.R  qp.R  sensitivity.R  sos.R  sudoku.R  workforce1.R  workforce2.R  workforce3.R  workforce4.R  workforce5.R
gurobi/examples/c#/: batchmode_cs.cs  bilinear_cs.cs  callback_cs.cs  dense_cs.cs  diet_cs.cs  facility_cs.cs  feasopt_cs.cs  fixanddive_cs.cs  gc_funcnonlinear_cs.cs  gc_pwl_cs.cs  gc_pwl_func_cs.cs  genconstr_cs.cs  lp_cs.cs  lpmethod_cs.cs  lpmod_cs.cs  mip1_cs.cs  mip2_cs.cs  multiobj_cs.cs  multiscenario_cs.cs  params_cs.cs  piecewise_cs.cs  poolsearch_cs.cs  qcp_cs.cs  qp_cs.cs  sensitivity_cs.cs  sos_cs.cs  sudoku_cs.cs  tsp_cs.cs  tune_cs.cs  workforce1_cs.cs  (+4 more)
gurobi/include/: gurobi_c++.h
gurobi/lib/: gurobi.py  gurobi110.netstandard20.xml
gurobi/matlab/: README  gurobi.m  gurobi.mexa64  gurobi_feasrelax.m  gurobi_feasrelax.mexa64  gurobi_iis.m  gurobi_iis.mexa64  gurobi_presolve.mexa64  gurobi_read.m  gurobi_read.mexa64  gurobi_relax.m  gurobi_relax.mexa64  gurobi_setup.m  gurobi_write.m  gurobi_write.mexa64
include/: directed_graph.hpp  graph.hpp  sat_solver.hpp  solver.hpp
src/: abstract_graph.h  approximation_routine.cpp  approximation_routine.h  barycenter_heuristic.cpp  barycenter_heuristic.h  base_solver.cpp  base_solver.h  bipartite_graph.cpp  bipartite_graph.h  caterpillar_recognizer.cpp  caterpillar_recognizer.h  cografando.cc  crossing_matrix.cpp  crossing_matrix.h  directed_graph.cpp  dp_solver.cpp  dp_solver.h  environment.cpp  environment.h  fenwick_tree.h  fraction_type.h  graph.cpp  graph.h  graph.hpp  ip_solver.cpp  ip_solver.h  ip_solver_gurobi.cpp  ip_solver_gurobi.h  ip_solver_lpsolve.cpp  ip_solver_lpsolve.h  ip_solver_or.cpp  ip_solver_or.h  ladder_recognizer.cpp  ladder_recognizer.h  lgraph.cpp  lgraph.h  lobster_recognizer.cpp  lobster_recognizer.h  main.cpp  median_heuristic.cpp  (+23 more)
test/: exact-solutions.txt
tests/: c3.gr  c4.gr  c5.gr  test_cograph.sh
tests/exact-public/: exact_002.gr  exact_004.gr  exact_006.gr  exact_008.gr  exact_010.gr  exact_012.gr  exact_014.gr  exact_016.gr  exact_018.gr  exact_020.gr  exact_022.gr  exact_024.gr  exact_026.gr  exact_028.gr  exact_030.gr  exact_032.gr  exact_034.gr  exact_036.gr  exact_038.gr  exact_040.gr  exact_042.gr  exact_044.gr  exact_046.gr  exact_048.gr  exact_050.gr  exact_052.gr  exact_054.gr  exact_056.gr  exact_058.gr  exact_060.gr  exact_062.gr  exact_064.gr  exact_066.gr  exact_068.gr  exact_070.gr  exact_072.gr  exact_074.gr  exact_076.gr  exact_078.gr  exact_080.gr  (+60 more)
(+373 files in other folders)
